Fix overlapping logo in hero for small devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -103,8 +103,8 @@
 
     &__body {
         position: relative;
-        top: -66px;
-        left: -2px;
+        top: -55px;
+        left: -4px;
 
         @include media-query(medium) {
             top: 0;
